--- a/AV/Development/Rabin_Karp_Algorithm_Slideshow.html
+++ b/AV/Development/Rabin_Karp_Algorithm_Slideshow.html
@@ -16,11 +16,18 @@
       position: absolute;
       top: 15px;
     }
-    .jsavcanvas { height: 470px; }
+    .jsavcanvas { height: 500px; }
 
     }
     .jsavoutput {
       height: 75px;
+    }
+    .jsavarray .jsavindex {
+      min-height: 40px;
+      height: 40px;
+      min-width: 45px;
+      width: 45px;
+      font-size: 13px;
     }
     </style>
   </head>
@@ -43,19 +50,19 @@
     <script>
     var rk_slideshow = new JSAV("container");
 
- 	rk_slideshow.umsg("The Rabin-Karp algorithm uses the numeric representation of the substring, as a whole, to make comparisons. This is done by choose an alphabet, we will simply use the 26 letters in the english alphabet (lower case representations only). Since there are 26 letters we will be using a Base 26 number system for this example.");
+ 	rk_slideshow.umsg("The Rabin-Karp algorithm uses the numeric representation of the substring, as a whole, to make comparisons. This is done by choose an alphabet, we will simply use the 26 letters in the english alphabet (lower case representations only). We will be using the ascii values of each character (97-122) so we will be in base 122.");
 	var alphabet = rk_slideshow.ds.array(['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z']);
 
 	rk_slideshow.displayInit();	
 	rk_slideshow.step();
 
-	rk_slideshow.umsg("We will start by assigning every letter in our alphabet a value. To elaborate 'a' will be 0, 'b' will be 1, ... , 'z' will be 25.");
-	for(var i = 0; i < 26; i++) {
-		alphabet.value(i, alphabet.value(i) +", "+ i);
+	rk_slideshow.umsg("We will start by assigning every letter in our alphabet a value. To elaborate 'a' will be 97, 'b' will be 98, ... , 'z' will be 122. In other words, we will represent each character with it's ascii value.");
+	for(var i = 97; i < 123; i++) {
+		alphabet.value(i-97, alphabet.value(i-97) +", "+ i);
 	}
 	rk_slideshow.step();
 
-	rk_slideshow.umsg("The shown array is not actually used in the algorithm, it has been computed to make the algorithm easier to understand when tracing through it. With that noted, lets introduce our master string and search string...");
+	rk_slideshow.umsg("The shown array is not actually used in the algorithm, it has been computed to make the algorithm easier to understand when tracing through it. We will simply call the ascii value of each character. With that noted, lets introduce our master string and search string...");
 	rk_slideshow.step();
 
 	rk_slideshow.umsg("We can now see our two strings 'lookforsomestr' and 'somestr', We will now introduce the pseudo code and then get started");
@@ -63,10 +70,170 @@
 	var sub = rk_slideshow.ds.array("somestr       ".split(""), {indexed: true});
 	rk_slideshow.step();
 
-    var pseudo = rk_slideshow.code("Input: Two Strings M and S and appropriate mod factor Q \nOutput: Position of the first match of S in M or -1 \nCP = 1 \nfor i = 1 to S.length: \n\tCP = CP * C mod Q \nMagic_S = Horner(S) \nMagic_M = Horner(M[0] ... M[S.length-1] \nWhile p < M.length - S.length+1 and Magic_S != Magic_M: \n\tp+=1\n\tMagic_M = (Magic_M * C - M[p] * CP + Q * C + M[p+S.length]) mod Q \nif Magic_M == Magic_S return p \nelse return -1", {before: alphabet});
+	rk_slideshow.umsg("The pseudo code below can be difficult to follow when we don't have a match, we will keep track of a couple of key variables to make it easier.");
+    var pseudo = rk_slideshow.code("Input: Two Strings M and S and appropriate mod factor Q \nOutput: Position of the first match of S in M or -1 \nCP = 1, p = 0 \nfor i = 1 to S.length: \n\tCP = CP * C mod Q \nMagic_S = Horner(S) \nMagic_M = Horner(M[0] ... M[S.length-1]) \nWhile p < M.length - S.length+1: \n\tif Magic_S == Magic_M: \n\t\t if S == M(M[0] ... M[S.length-1]): \n\t\t\treturn p \n\tMagic_M = (Magic_M * C - (M[p].ascii_val * CP) + (Q * C + M[p+S.length].ascii_val)) mod Q  \n\tp+=1 \nreturn -1", {before: alphabet, center: false});
+	rk_slideshow.step();
 
+	rk_slideshow.umsg("Pictured to the right of the pseudo code are 6 important variables that we will keep up to date as a reference.");	
+	var q = rk_slideshow.variable([0], {visible: true, label: "Q = ", left: "750px", top:"200px"});
+	var c = rk_slideshow.variable([0], {visible: true, label: "C = ", left: "750px", top: "230px"});
+    var cp = rk_slideshow.variable([0], {visible: true, label: "CP = ", left: "750px", top: "260px"});
+	var magic_m = rk_slideshow.variable([0], {visible: true, label: "Magic_M = ", left: "750px", top:"290px"});
+	var magic_s = rk_slideshow.variable([0], {visible: true, label: "Magic_S = ", left: "750px", top:"320px"});
+	var p = rk_slideshow.variable([0], {visible: true, label: "p = ", left: "750px", top:"350px"});
+	rk_slideshow.step();
 
+	rk_slideshow.umsg("We can start by assigning values to a couple of them... We know we need Q as an input, we also know Q need to be larger than C and a prime number. We can assign C = 123 because our alphabet is that size (0-122). We can then pick an appropriate Q, lets say 131.");
+	q.value(131);
+	c.value(123);
+	rk_slideshow.step();
 
+	rk_slideshow.umsg("We then assign CP = 1 and enter our for loop on line 4, calculating it's final value. The loop is simple, every iteration is just CP = CP * C % Q and it runs S.length times. This ends up being: 27");
+	cp.value(27);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We then calculate the Horner method value for M and S, giving us Magic_M and Magic_S. We only calculate the Horner value for the substring of the master string that will first be compared to S (M(M[0]...M[S.length-1]). These values end up being: Magic_M: 111 and Magic_S: 66.");
+	magic_m.value(111);
+	magic_s.value(66);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We are now ready to start the algorithm since we have all of our important variables calculated.");
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We are comparing Magic_S to Magic_M first, which is really comparing numeric representation of S to the numeric representation of M(M[0]...M[S.length-1]). This equates to if(66 == 111), which it doesn't, so we move on to line 12 to recalculate Magic_M...");
+	master.highlight([0,1,2,3,4,5,6]);
+	sub.highlight([0,1,2,3,4,5,6]);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("This is the most important part of the algorithm because it subtracts the value of the first character in M that we are comparing, and adds the value of the next one we are adding in without needing to Horner(M(M[n]...M[n+S.length-1])). This means we have an O(1) way to recalculate Magic_M.");
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("Line 12: we subtract (M[p].ascii_val * CP) which is the value of the character at M[p] and we add (Q * C + M[p+S.length].ascii_val) which is the value of the character at the next spot in our string M. This changes M to 110. We then increment p by 1 and continue. Characters highlighted in Red were just dropped, characters highlighted in green were added.");
+	master.unhighlight(0);
+	master.css(0, {"background-color":"red"});
+	master.css(7, {"background-color":"green"});
+	magic_m.value(110);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.value(0, '');
+	sub.unhighlight(0);
+	sub.highlight(7);
+	p.value(1);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 33 after the next operation and we start the loop over again...");
+	master.unhighlight(1);
+	master.css(0, {"background-color":"white"});
+	master.highlight(7);
+	master.css(1, {"background-color":"red"});
+	master.css(8, {"background-color":"green"});
+	magic_m.value(33);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(1);
+	sub.highlight(8);
+	p.value(2);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 123 after the next operation and we start the loop over again...");
+	master.unhighlight(2);
+	master.css(1, {"background-color":"white"});
+	master.highlight(8);
+	master.css(2, {"background-color":"red"});
+	master.css(9, {"background-color":"green"});
+	magic_m.value(123);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(2);
+	sub.highlight(9);
+	p.value(3);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 27 after the next operation and we start the loop over again...");
+	master.unhighlight(3);
+	master.css(2, {"background-color":"white"});
+	master.highlight(9);
+	master.css(3, {"background-color":"red"});
+	master.css(10, {"background-color":"green"});
+	magic_m.value(27);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(3);
+	sub.highlight(10);
+	p.value(4);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 27 after the next operation, this is a perfect example of a collision in the algorithm and why we have an extra check before returning p. We start the loop over again...");
+	master.unhighlight(4);
+	master.css(3, {"background-color":"white"});
+	master.highlight(10);
+	master.css(4, {"background-color":"red"});
+	master.css(11, {"background-color":"green"});
+	magic_m.value(27);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(4);
+	sub.highlight(11);
+	p.value(5);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 47 after the next operation and we start the loop over again...");
+	master.unhighlight(5);
+	master.css(4, {"background-color":"white"});
+	master.highlight(11);
+	master.css(5, {"background-color":"red"});
+	master.css(12, {"background-color":"green"});
+	magic_m.value(47);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they don't match, which means we recalculate Magic_M using the same technique found on line 12.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(5);
+	sub.highlight(12);
+	p.value(6);
+	rk_slideshow.step();
+	
+	rk_slideshow.umsg("We find that Magic_M is now equal to 66 after the next operation and we start the loop over again...");
+	master.unhighlight(6);
+	master.css(5, {"background-color":"white"});
+	master.highlight(12);
+	master.css(6, {"background-color":"red"});
+	master.css(13, {"background-color":"green"});
+	magic_m.value(66);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We now compare Magic_S to Magic_M again and realize that they match (66==66), which means we go on to the next if statement checking to see if S == M(M[p]...M[p+S.length-1]), which they do.");
+	for(var i = sub.size()-1; i > 0; i--) {
+		sub.value(i, sub.value(i-1));
+	}
+	sub.unhighlight(6);
+	sub.highlight(13);
+	p.value(7);
+	rk_slideshow.step();
+
+	rk_slideshow.umsg("We then return p, which is 7, indicating that there was a match found at 7 and completeing our algorithm!");
     rk_slideshow.recorded();
   </script>
   </body>
