Quick fix to show the appropriate variable value for Q.

--- a/Exercises/Development/Rabin_Karp_Horners_Exercise.html
+++ b/Exercises/Development/Rabin_Karp_Horners_Exercise.html
@@ -118,7 +118,7 @@
 	var c_var = rk.variable([c], {visible: true, label: "C = ", before:pseudo});
 
 	//make a variable 'q' that holds q's value
-	var q_var = rk.variable([10], {visible: true, label: "Q = ", before:c_var});
+	var q_var = rk.variable([q], {visible: true, label: "Q = ", before:c_var});
 
 	//label the String
     var str_label = rk.label("String:", {top: "155px", left:"200px"}).css({"font-size":"23px"});
