--- a/AV/Development/Amortized2.html
+++ b/AV/Development/Amortized2.html
@@ -52,13 +52,25 @@
 
 	//operations is a 2D array containing the operation name, the name of the function to call for it, and a function returning true if you should use this operation at this time
 	//the next five variables refer to potential before (pb), potential after(pa), change in potential (change_p, really just pa-pb), actual cost (acutal), amortized time (amort), these only refer to the starting values.
-	var construct_show = (function(operations, potential_function, pb, pa, change_p, actual, amort){
+	//developer_defined_backstep: a string that is the function call to the function that should be called when we take a step back in the algorithm
+	var construct_show = (function(operations, potential_function, pb, pa, change_p, actual, amort, developer_defined_backstep){
 		visualization = new JSAV("container");
+
+		//get the div I want the button and checkbox in
+		var the_div = document.getElementById('container');
+		//create a checkbox to show pseudo code
+		var back_button = document.createElement('button');
+		back_button.id = 'back_button';
+		the_div.appendChild(back_button);
+		//Add the text 'Back' to our dynamically created button
+		$("#back_button").html("Back One Step");
+
+
 		var blank_arr = ['','','','','','','','','','','','','','','','','','','',''];
-		pot_before = visualization.ds.array(blank_arr, {indexed: true, center: false});
-		pot_after = visualization.ds.array(blank_arr, {indexed: true, center: false});
-		actual_time = visualization.ds.array(blank_arr, {indexed: true, center: false});
-		amortized_time = visualization.ds.array(blank_arr, {indexed: true, center: false});
+		pot_before = visualization.ds.array(blank_arr, {center: false});
+		pot_after = visualization.ds.array(blank_arr, {center: false});
+		actual_time = visualization.ds.array(blank_arr, {center: false});
+		amortized_time = visualization.ds.array(blank_arr, {center: false});
 		
 		var pot_before_label = visualization.label("Potential Before", {before: pot_before});
 		var pot_after_label = visualization.label("Potential After", {before: pot_after});
@@ -71,6 +83,11 @@
 		var actual_time_var = actual;    
 		var amortized_time_var = amort;
 
+
+		//array to act as a stack and hold the values of all the variables at each step
+		var each_step_arr = new Array();
+		//variable to hold the pseudo code
+		var pseudo;
 		next_step = (function() {
 			//for every operation we have
 			for(var i = 0; i < operations.length; i++) {
@@ -82,7 +99,15 @@
 					change_in_pot_var = pot_after_var - pot_before_var;
 					amortized_time_var = change_in_pot_var + actual_time_var;
 					console.log("pot before: "+pot_before_var+" pot after: "+pot_after_var+" actual: "+actual_time_var+" amortized: "+ amortized_time_var);
+					
+					//remove old pseudo from previous step
+					if(typeof(pseudo) != 'undefined')
+						pseudo.clear();
+					//show the pseudo code for the operation that was just performed
+					var pseudo_string = operations[i][3];
+					pseudo = visualization.code(pseudo_string, {relativeTo: pot_after, left:"600px"});
 
+					
 					//unhighlight all of the bars
 					pot_before.unhighlight();
 					pot_after.unhighlight();
@@ -97,10 +122,43 @@
 						actual_time.highlight(i);
 					for(var i = 0;i<amortized_time_var;i++)
 						amortized_time.highlight(i);
+
+					//store this step in an array (implemented as a stack, so we can go back
+					each_step_arr.push([pot_before_var,pot_after_var,actual_time_var,amortized_time_var,change_in_pot_var,pseudo_string]);
+					//break because we can only do 1 operation at a time
 					break;
 				}
+			}			
+		});
+		//back button function
+		$("#back_button").click(function() {
+			//alert(each_step_arr);
+			//make sure they have done at least 2 steps
+			if(each_step_arr.length > 1) {
+				//pop off the most recent step
+				each_step_arr.pop();
+
+				//clear the pseudo code
+				pseudo.clear();
+				pseudo = visualization.code(each_step_arr[each_step_arr.length-1][5], {relativeTo: pot_after, left:"600px"});
+
+				//unhighlight all of the bars
+				pot_before.unhighlight();
+				pot_after.unhighlight();
+				actual_time.unhighlight();
+				amortized_time.unhighlight();
+				//highlight each spot in the bars
+				for(var i = 0; i < each_step_arr[each_step_arr.length-1][0];i++)
+					pot_before.highlight(i);
+				for(var i = 0; i < each_step_arr[each_step_arr.length-1][1];i++)
+					pot_after.highlight(i);
+				for(var i = 0;i<each_step_arr[each_step_arr.length-1][2];i++)
+					actual_time.highlight(i);
+				for(var i = 0;i<each_step_arr[each_step_arr.length-1][3];i++)
+					amortized_time.highlight(i);
+
+				eval(developer_defined_backstep);
 			}
-			
 		});
 
 	});
@@ -114,6 +172,11 @@
 	var arr, element, current_index;
 
 	//FUNCTIONS for dynamic array
+
+	//function that returns a random number between lower and upper bound
+    function gen_random(lower_bound, upper_bound) {
+        return Math.floor(Math.random() * (upper_bound - lower_bound + 1) + lower_bound);
+    }
 
 	//add a new element
 	function add_element(arr, element, c) {
@@ -154,11 +217,32 @@
 		if(current_index == arr.size()) return true;
 		else return false;
 	}
+
+	//function called when the user wants to step backwards
+	function dynamic_array_backstep(arr) {
+		if(((current_index-1) == (arr.size()/2)) && (arr.size() > 4)) {
+			var arr_temp = new Array();
+			for(var i = 0; i < arr.size()/2; i++) {
+				arr_temp[i] = arr.value(i);
+			}
+			arr.clear();
+			this.arr = visualization.ds.array(arr_temp);
+			current_index--;		
+		} else {
+			current_index--;
+			arr.value(current_index, '');
+		}
+	}
+
 	//initializes the dynamic array function
 	function dynamic_array() {
-		var operations = [["Add", "add_element(arr, element, current_index)", "check_add_use(arr, current_index)"],["Resize","resize(arr, element, current_index)", "check_resize_use(arr, current_index)"]];
+		//define the pseudo code for both functions
+		var add_pseudo = "function add(array, element, current_index): \n\tarray[current_index] = element \n\tcurrent_index++";
+		var resize_pseudo = "function resize(array, element, current_index): \n\tarr_new = new array[array.size*2] \n\tfor i = 0; i<arr.length; i++: \n\t\tarr_new[i] = arr[i] \n\tarr_new[current_index] = element \n\tcurrent_index++ \n\tarr = new_arr";
 
-		construct_show(operations, "potential_function_dynamic_arrays(current_index,arr.size())",0,0,0,1,0);
+		var operations = [["Add", "add_element(arr, gen_random(0,100), current_index)", "check_add_use(arr, current_index)",add_pseudo],["Resize","resize(arr, gen_random(0,100), current_index)", "check_resize_use(arr, current_index)", resize_pseudo]];
+
+		construct_show(operations, "potential_function_dynamic_arrays(current_index,arr.size())",0,0,0,1,0, "dynamic_array_backstep(arr)");
 		/*****************************
 			Here I am setting up the button that we will use to add another element to the array list
 		******************************/
@@ -168,13 +252,11 @@
 		var add_button = document.createElement('button');
 		add_button.id = 'add_button';
 		the_div.appendChild(add_button);
-		//set the html of the span to the actual text now that they are both nested as children of the div
-		$("#input_label").html("Enter Value Here: ");
 		//Add the text 'Add' to our dynamically created button
 		$("#add_button").html("Add another element");
 	
 		arr = visualization.ds.array(['','','','']);
-		element = 0;
+		element = gen_random(0, 100);
 		current_index = 0;
 
 		$("#add_button").click(function() {
@@ -187,6 +269,10 @@
 	//You don't need to modify this function if you are adding a new template.
 	//Make sure your option value matches your method name...
 	$("#begin").click(function(){
+	var container = document.getElementById('container');
+	while(container.firstChild){
+		container.removeChild(container.firstChild);
+	}
 		eval($("#choices").val()); 
 	});
 
