Show proficiency points.

--- a/khan-exercises/exercises/khan-site.html
+++ b/khan-exercises/exercises/khan-site.html
@@ -31,6 +31,12 @@
                                 <div class="topic-exercise-badge">&nbsp;</div>
                                 <span class="practice-exercise-topic-context">Practicing</span>
                         </h2></div>
+                        <div>
+                            <span id = "pointsrecieve">get</span>
+                            <span>  /  </span>
+                            <span id = "pointsleft">100</span>
+                        </div>
+ 
                         <div class="exercises-body">
                             <div class="exercises-stack">&nbsp;</div>
                             <div class="exercises-card current-card">
